--- a/view/store/storeDetail.html
+++ b/view/store/storeDetail.html
@@ -204,7 +204,7 @@
         /**
         * Modal
         */
-        #qnaModal .modal {
+        #qnaModal .modal_qna {
             display: flex;
             align-items: center;
             justify-content: center;
@@ -225,7 +225,7 @@
             transform: scale(1.2);
             transition: all 0.6s cubic-bezier(0.55, 0, 0.1, 1);
         }
-        #qnaModal .modal .close-modal {
+        #qnaModal .modal_qna .close-modal {
             position: absolute;
             cursor: pointer;
             top: 5px;
@@ -236,11 +236,11 @@
             transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1), transform 0.6s cubic-bezier(0.55, 0, 0.1, 1);
             transition-delay: 0.3s;
         }
-        #qnaModal .modal .close-modal svg {
+        #qnaModal .modal_qna .close-modal svg {
             width: 1.75em;
             height: 1.75em;
         }
-        #qnaModal .modal .modal-content {
+        #qnaModal .modal_qna .modal-content {
             opacity: 0;
             -webkit-backface-visibility: hidden;
             backface-visibility: hidden;
@@ -249,15 +249,15 @@
             background-color: rgb(255, 255, 255);
             padding: 30px;
         }
-        #qnaModal .modal.active {
+        #qnaModal .modal_qna.active {
             visibility: visible;
             opacity: 1;
             transform: scale(1);
         }
-        #qnaModal .modal.active .modal-content {
+        #qnaModal .modal_qna.active .modal-content {
             opacity: 1; 
         }
-        #qnaModal .modal.active .close-modal {
+        #qnaModal .modal_qna.active .close-modal {
             transform: translateY(10px);
             opacity: 1;
         }
@@ -268,7 +268,7 @@
         @media only screen and (max-width: 39.9375em) {
 
             
-            #qnaModal .modal {
+            #qnaModal .modal_qna {
                 position: fixed;
                 top: 0;
                 left: 0;
@@ -448,7 +448,7 @@
                             </div>
                         </div>
                         <div class="col-xl-4 offset-xl-1">
-                            <div id="wrapper" style="width: 250px; margin-top: 30px; margin-left: 30px;">
+                            <div id="wrapper" style="width: 250px; margin-top: 30px; margin-left: 10px;">
                                 <input type="radio" id="star1" class="star-rating-icon" name="productRevRating" style="display: none;" value="1" checked/>
                                 <label for="star1" class="star-label"></label>
                                 <input type="radio" id="star2" class="star-rating-icon" name="productRevRating" style="display: none;" value="2"/>
@@ -474,7 +474,7 @@
                         </div>
                     </div> 
                     
-                    <div class="row" style="float: right; margin-right: 10px;">
+                    <div class="row" style="float: right; margin-right: 40px;">
                         <input type="button" class="review_write_btn" value="작성하기">
                     </div>
                 </div>
@@ -487,7 +487,7 @@
 
     <!-- 문의 모달 -->
     <div id="qnaModal" class="modal-overlay">
-        <div class="modal">
+        <div class="modal_qna">
         <a class="close-modal">
             <svg viewBox="0 0 20 20">
             <path fill="#000000" d="M15.898,4.045c-0.271-0.272-0.713-0.272-0.986,0l-4.71,4.711L5.493,4.045c-0.272-0.272-0.714-0.272-0.986,0s-0.272,0.714,0,0.986l4.709,4.711l-4.71,4.711c-0.272,0.271-0.272,0.713,0,0.986c0.136,0.136,0.314,0.203,0.492,0.203c0.179,0,0.357-0.067,0.493-0.203l4.711-4.711l4.71,4.711c0.137,0.136,0.314,0.203,0.494,0.203c0.178,0,0.355-0.067,0.492-0.203c0.273-0.273,0.273-0.715,0-0.986l-4.711-4.711l4.711-4.711C16.172,4.759,16.172,4.317,15.898,4.045z"></path>
@@ -769,14 +769,14 @@
 
                 <div class="row" style="height: 80px;">
                     <div class="col" style="text-align: right;padding-top: 15px;border-bottom: 1px solid rgb(99,99,99);height: 70px;">
-                        <div class="dropdown"><button class="btn dropdown-toggle" aria-expanded="false" data-toggle="dropdown"
+                        <div class="dropdown"><button id="rating_dropdown" class="btn dropdown-toggle" aria-expanded="false" data-toggle="dropdown"
                                 type="button">별점&nbsp;</button>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#" style="color: #f4744c;">★★★★★</a>
-                                <a class="dropdown-item" href="#" style="color: #f4744c;">★★★★</a>
-                                <a class="dropdown-item" href="#" style="color: #f4744c;">★★★</a>
-                                <a class="dropdown-item" href="#" style="color: #f4744c;">★★</a>
-                                <a class="dropdown-item" href="#" style="color: #f4744c;">★</a>
+                                <a class="dropdown-item" href="javascript:selectRating(5)" style="color: #f4744c;">★★★★★</a>
+                                <a class="dropdown-item" href="javascript:selectRating(4)" style="color: #f4744c;">★★★★</a>
+                                <a class="dropdown-item" href="javascript:selectRating(3)" style="color: #f4744c;">★★★</a>
+                                <a class="dropdown-item" href="javascript:selectRating(2)" style="color: #f4744c;">★★</a>
+                                <a class="dropdown-item" href="javascript:selectRating(1)" style="color: #f4744c;">★</a>
                             </div>
                         </div>
                     </div>
@@ -914,7 +914,6 @@
             </div>
 
 
-
             <!-- 스크롤 따라다니는 div -->
             <div id="sidebox" class="col-md-4">
                 <div id="optionList_side">
@@ -949,7 +948,6 @@
 
         </div>
     </div>
-
 
 
     <footer include-html="../commons/footer.html"></footer>
@@ -1060,6 +1058,11 @@
     // 바로구매 기능
     function directPurchase() {
 
+        if(sessionId == "") {
+            alert('로그인 후에 이용 가능합니다.');
+            return;
+        }
+
         let selectItem = $('#selectItem').val();
         let itemCount = $('#itemCount').val();
         location.href = "order.html?seq="+productSeq+"&selectItem=" +selectItem+"&itemCount="+itemCount;
@@ -1067,7 +1070,21 @@
     
     // 장바구니 담기
     function addCart() {
+        
+        if(sessionId == "") {
+            alert('로그인 후에 이용 가능합니다.');
+            return;
+        }
 
+        let optionLength = $('p[name=selectKey]').length/2;
+        let opArr = new Array();
+        for(let i=0; i<optionLength; i++) {
+            let data = new Object();
+            data.optionTitle = $('p[name=selectKey]').eq(i).text();
+            data.optionContent =  $('select[name=selectItem_'+(i+1)+']').val();
+            opArr.push(data);
+        }
+        
         $.ajax({
             url: "http://192.168.0.231:3000/addCart",
             type: "get",
@@ -1075,7 +1092,7 @@
                 "cartClassify":"CT-"+sessionId.userSeq,
                 "userSeq": sessionId.userSeq,
                 "productSeq":productSeq,
-                "selectOption":"{\""+$('#selectKey').text()+"\":\""+$('#selectItem').val()+"\"}",
+                "selectOption":JSON.stringify(opArr),
                 "quantity":$('#itemCount').val(),
                 "price":$('#sellPrice').text().replace(/[^0-9]/g, '')
             },
@@ -1099,6 +1116,8 @@
 
             }
         });
+
+        
     };
 
     $(document).ready(function () {
@@ -1173,7 +1192,7 @@
                         if(list[i].optionSeq == 1) {
                             app+=   '<div class="row" style="margin: 0px 0px 7px 9px;">'
                                 +        '<div class="col-md-3"><span style="color: rgb(101,101,101);font-family: \'Noto Sans KR\';">'
-                                +            '<strong id="selectKey">'+list[i].optionTitle+'</strong>'
+                                +            '<p name="selectKey"><strong>'+list[i].optionTitle+'</strong></p>'
                                 +        '</span></div>'
                                 +    '<div class="col-md-5">'
                                 +        '<select name="selectItem_'+seq+'" class="shadow-sm custom-select custom-select-sm"'
@@ -1262,7 +1281,7 @@
         $(this).css('border-bottom-width', '3px');
     })
 
-
+    
 
 
 
@@ -1303,6 +1322,7 @@
     
     $('.close-modal').click(function(){
         elements.removeClass('active');
+        elements_qna.removeClass('active');
     });
 
     // 리뷰 작성 완료 버튼
@@ -1321,7 +1341,7 @@
                 if (data == "suc") {
                     alert("리뷰가 성공적으로 작성되었습니다.");
                     getProductDetail();
-                    getProductReviewList(0);
+                    getProductReviewList(0, 0);
                     elements.removeClass('active');
                 } else {
                     console.log('리뷰 작성 실패');
@@ -1359,14 +1379,15 @@
 
 
     // 리뷰 리스트 가져오기
-    getProductReviewList(0);
-    function getProductReviewList(pageNum) {
+    getProductReviewList(0, 0);
+    function getProductReviewList(pageNum, ratingNum) {
         $.ajax({
             url: "http://192.168.0.231:3000/getProductReviewList",
             type: "post",
             data: {
                 "productSeq": productSeq,
-                "productRevPageNum": pageNum
+                "productRevPageNum": pageNum,
+                "ratingNum" : ratingNum
             },
             success: function (list) {
                 console.log(list);
@@ -1377,9 +1398,15 @@
 
                 if (Object.keys(list).length == 0) {
 
-                    app += '<div class="reviews" style="width: 600px; margin-right: 50px;">'
-                        + '<h3 style="font-size: 16px; margin-top: 30px;">작성된 후기가 없습니다. 첫번째 후기를 남겨주세요! <br><br></h3>'
-                        + "</div>";
+                    if(ratingNum > 0) {
+                        app += '<div class="reviews" style="width: 600px; margin-right: 50px;">'
+                            + '<h3 style="font-size: 16px; margin-top: 30px;">리뷰가 없습니다. <br><br></h3>'
+                            + "</div>";
+                    } else {
+                        app += '<div class="reviews" style="width: 600px; margin-right: 50px;">'
+                            + '<h3 style="font-size: 16px; margin-top: 30px;">작성된 후기가 없습니다. 첫번째 후기를 남겨주세요! <br><br></h3>'
+                            + "</div>";
+                    }
 
                     $("#productReview").append(app);
 
@@ -1409,7 +1436,7 @@
                             +                '</div>'
                             +            '</div>'
                             +            '<div class="row">'
-                            +                '<div class="col"><a href="http://192.168.0.231:3000/upload/'+val.productRevFileName+'" data-toggle="lightbox" data-gallery="example-gallery"><img class="reviewImg" src="http://192.168.0.231:3000/upload/'+val.productRevFileName+'" width="130px" style="border-radius: 10px;"></a></div>'
+                            +                '<div class="col"><a href="http://192.168.0.231:3000/upload/'+val.productRevFileName+'" data-toggle="lightbox" data-gallery="example-gallery"><img class="reviewImg" alt="" src="http://192.168.0.231:3000/upload/'+val.productRevFileName+'" width="130px" style="border-radius: 10px;"></a></div>'
                             +            '</div>'
                             +        '</div>'
                             +    '</div>';
@@ -1423,21 +1450,30 @@
         });
     };
 
+    // 리뷰 별점순 클릭
+    function selectRating(num) {
+        $('#rating_dropdown').text('★'.repeat(num));
+        $('#rating_dropdown').css('color', '#f4744c');
+        getProductReviewList(0, num);
+        getProductReviewCount(num);
+    }
+
 
     // 리뷰 총 수 가져오기
-    getProductReviewCount()
-    function getProductReviewCount() {
+    getProductReviewCount(0)
+    function getProductReviewCount(ratingNum) {
 
         $.ajax({
             url: "http://192.168.0.231:3000/getProductReviewCount",
             type: "get",
             data: {
-                "productSeq": productSeq
+                "productSeq": productSeq,
+                "ratingNum": ratingNum
             },
             success: function (totalCount) {
                 console.log(totalCount);
                 $('span[name=reviewCount]').text(totalCount);
-                loadPage(totalCount);
+                loadPage(totalCount, ratingNum);
             },
             error: function () {
                 alert('getProductReviewCount() error');
@@ -1455,7 +1491,7 @@
 
 
     // 리뷰 페이징 처리
-    function loadPage(totalCount) {
+    function loadPage(totalCount, ratingNum) {
 
         let pageSize = 4;
         let nowPage = 1;
@@ -1468,7 +1504,7 @@
 
 
         $("#pagination").twbsPagination({
-            //	startPage: 1,
+            startPage: 1,
             totalPages: _totalPages,
             visiblePages: 10,
             first: '<span aria-hidden="true">«</span>',
@@ -1478,7 +1514,7 @@
             initiateStartPageClick: false,		// onPageClick 자동 실행되지 않도록 한다
             onPageClick: function (event, page) {
                 nowPage = page;
-                getProductReviewList(page-1);
+                getProductReviewList(page-1, ratingNum);
             },
         });
 
@@ -1486,7 +1522,11 @@
 
 
 
-    let elements_qna = $('#qnaModal.modal-overlay, .modal');
+
+
+
+
+    let elements_qna = $('#qnaModal.modal-overlay, .modal_qna');
 
     // 문의 모달창 버튼
     $(document).on('click', '#qnaWriteBtn', function(){
@@ -1663,7 +1703,7 @@
 
 
         $("#pagination_qna").twbsPagination({
-            //	startPage: 1,
+            startPage: 1,
             totalPages: _totalPages,
             visiblePages: 10,
             first: '<span aria-hidden="true">«</span>',
